<resources>
    <string name="app_name">TestActivityAndroid_9</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="contentDescription">app_name</string>
    <string name="CART">CART</string>
    <string name="_7_000_000_00_00">+7 (000) 000 00 00</string>
    <string name="Пароль">Пароль</string>
    <string name="Войти">Войти</string>
    <string name="Забыли_пароль">Забыли пароль?</string>
    <string name="Регистрация">Регистрация</string>
    <string name="Настройка">Настройка</string>
    <string name="ordering">Оформление заказа</string>
    <string name="user_name">Ваше Имя</string>
    <string name="address">Ваш Адрес доставки</string>
    <string name="ordering_descr">При оформлении заказа, зарегистрированные пользователи получают <u>бонусы</u></string>
    <string name="payment_method">Способ оплаты</string>
    <string name="ordering_cash">Наличными</string>
    <string name="ordering_card">Картой курьеру</string>
    <string name="commentary">Ваш комментарий</string>


    <string name="town">Уссурийск</string>

    <string name="log_in">Войти</string>

    <string name="stock">Акции</string>

    <string name="cafe">Рестораны и кафе</string>

    <string name="dinner">Обед</string>

    <string name="search">Поиск</string>

    <string name="basket">Корзина</string>

    <string name="history">История заказов</string>

    <string name="callback">Обратный звонок</string>
    <string name="podkrepizza">PodkrePizza</string>
    <string name="register">Зарегистрироваться</string>

    <string name="agreement"><u>Пользовательское соглашение</u></string>

    <string name="agreement_descr">Нажимая "\""Зарегистрироваться"\"", Вы принимаете</string>
    <string name="name">Имя</string>
    <string name="email">Эл. почта</string>

    <string name="descrName">Выберите и укажите в комментариях соус</string>

    <string name="bonus">Бонусы</string>

    <string name="total">Итого</string>

    <string name="order_btn">Оформить заказ</string>

    <string name="nettuno">Неттуно</string>

    <string name="_190">190</string>

    <string name="todo">TODO</string>
    <string name="submit_request">Оставить заявку</string>
    <string name="pizza">Пицца</string>
    <string name="order_byCard">Перевод через СберБанк\nонлайн курьеру</string>
    <string name="order_byCash">Наличными\nкурьеру</string>
    <string name="OrderPlaced">Заказ оформлен</string>
    <string name="username">Имя</string>
    <string name="Order_placed">Заказ принят и успешно отправлен в заведение</string>
    <string name="bonuses_15"><u>15 бонусов</u></string>
    <string name="rolls">Роллы</string>
    <string name="burgers">Бургеры</string>
    <string name="Sandwich">Сэндвичи</string>
    <string name="desserts">Десерты</string>
    <string name="drinks">Напитки</string>
    <string name="salats">Салаты</string>
    <string name="soups">Супы</string>
    <string name="fries">Фритюр</string>
    <string name="sets">Сеты</string>
</resources>