<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_orange"
    tools:context=".ui.login.signup.Login_SignupActivity">

    <RelativeLayout
        android:id="@+id/panel"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal"
        android:weightSum="16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/Регистрация"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/back"
            android:layout_width="45dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:background="@color/blue"
            android:src="@drawable/ic_baseline_chevron_left_24" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/panel">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNumberLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/_7_000_000_00_00"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:boxCornerRadiusBottomEnd="13dp"
            app:boxCornerRadiusBottomStart="13dp"
            app:boxCornerRadiusTopEnd="13dp"
            app:boxCornerRadiusTopStart="13dp"
            app:boxStrokeColor="@color/blue"
            app:hintTextColor="@color/blue"
            app:prefixText="+7">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userNumberLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/name"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:boxStrokeColor="@color/blue"
            app:boxCornerRadiusBottomEnd="13dp"
            app:boxCornerRadiusBottomStart="13dp"
            app:boxCornerRadiusTopEnd="13dp"
            app:boxCornerRadiusTopStart="13dp"
            app:hintTextColor="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userEmailNumberLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userNameLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:boxStrokeColor="@color/blue"
            app:boxCornerRadiusBottomEnd="13dp"
            app:boxCornerRadiusBottomStart="13dp"
            app:boxCornerRadiusTopEnd="13dp"
            app:boxCornerRadiusTopStart="13dp"
            app:hintTextColor="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userPasswordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userEmailNumberLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/Пароль"
            app:boxCornerRadiusBottomEnd="13dp"
            app:boxCornerRadiusBottomStart="13dp"
            app:boxCornerRadiusTopEnd="13dp"
            app:boxCornerRadiusTopStart="13dp"
            app:boxStrokeColor="@color/blue"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="320dp"
            android:layout_height="68dp"
            android:layout_below="@+id/userPasswordLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:backgroundTint="@color/blue" />

        <TextView
            android:id="@+id/agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSignUp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/agreement_descr"
            android:textAlignment="center"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/btnAgreement"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_below="@+id/agreement"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:clickable="true"
            android:minHeight="48dp"
            android:text="@string/agreement"
            android:textAlignment="center"
            android:textColor="@color/blue" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>