<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_orange"
    tools:context=".ui.login.LogInActivity">

    <RelativeLayout
        android:id="@+id/panel"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal"
        android:weightSum="16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/Войти"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/back"
            android:layout_width="45dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:background="@color/blue"
            android:src="@drawable/ic_baseline_chevron_left_24" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/panel">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userLogInNumberLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/_7_000_000_00_00"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:boxStrokeColor="@color/blue"
            app:boxCornerRadiusBottomEnd="13dp"
            app:boxCornerRadiusBottomStart="13dp"
            app:boxCornerRadiusTopEnd="13dp"
            app:boxCornerRadiusTopStart="13dp"
            app:hintTextColor="@color/blue"
            app:prefixText="+7">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userLogInNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="10" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userLogInEmailLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userLogInNumberLayout"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/email"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:boxCornerRadiusBottomEnd="13dp"
            app:boxCornerRadiusBottomStart="13dp"
            app:boxCornerRadiusTopEnd="13dp"
            app:boxCornerRadiusTopStart="13dp"
            app:boxStrokeColor="@color/blue"
            app:hintTextColor="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userLogInEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userLogInPasswordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userLogInEmailLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/Пароль"
            app:boxCornerRadiusBottomEnd="13dp"
            app:boxCornerRadiusBottomStart="13dp"
            app:boxCornerRadiusTopEnd="13dp"
            app:boxCornerRadiusTopStart="13dp"
            app:boxStrokeColor="@color/blue"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userLogInPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="320dp"
            android:layout_height="68dp"
            android:layout_below="@+id/userLogInPasswordLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/Войти"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/blue" />

        <Button
            android:id="@+id/btnForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLogIn"
            android:layout_centerHorizontal="true"
            android:background="#00FFFFFF"
            android:padding="3dp"
            android:text="@string/Забыли_пароль"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <Button
            android:id="@+id/registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnForgotPassword"
            android:layout_centerHorizontal="true"
            android:background="#00FFFFFF"
            android:padding="3dp"
            android:text="@string/Регистрация"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="16sp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>